@@ -23,8 +23,8 @@ public class Ex04_04 {
 		String uri = ".\\src\\days28\\Ex01.java";
 		// 라인단위로 읽어와서 출력(처리)
 		// FileReader, BufferedReader 보조스트림, String line, while (line != null){}
-		//Path path =Path.of(null);
-		//Path path =Paths.get(null);
+		//Path path =Path.of(URI uri);
+		//Path path =Paths.get(uri);
 		Path path =Path.of(uri);
 		Stream<String> lines = Files.lines(path);
 		lines.forEach(System.out::println);
